--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="main">
         <div class="background"></div>
         <div class="main__icon">
-            <img src="img/icon/icon_windi.svg" alt="icon_windi">
+            <img src="/img/icon/icon_windi.svg" alt="icon_windi">
             <img src="img/icon/icon_logo.svg" alt="logo">
         </div>
         <h1>Plánujeme a instalujeme</h1>
