--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@ title: Pro nas
 ---
 
 <section class="main">
-    <div class="background"></div>
+    <div class="main__background"></div>
+    
     <div class="main__icon">
         <img src="/img/icon/icon_windi.svg" alt="icon_windi">
         <img src="/img/icon/icon_logo.svg" alt="logo">
     </div>
-    <h1>Plánujeme a instalujeme</h1>
-    <h1>Tepelná čerpadla </h1>
-    <h1>Klimatizace</h1>
-    <h1>Tepelná čerpadla pro bazény</h1>
-    <h1>Dotace</h1>
+    <div class="main__animation-title">
+        <h1 class="main__title">Plánujeme a instalujeme</h1>
+        <h1 class="main__title">Tepelná čerpadla </h1>
+        <h1 class="main__title">Klimatizace</h1>
+        <h1 class="main__title">Tepelná čerpadla pro bazény</h1>
+        <h1 class="main__title">Dotace</h1>
+    </div>
 
 </section>
 
@@ -30,16 +33,18 @@ title: Pro nas
         <img src="img/icon/icon_logo.svg" alt="Logo">
     </div>
     <img src="img/photo/photo_about.svg" alt="">
+   
+    <!-- Blok se značkamy -->
     <div class="logo">
-        <h3 class="car">Spolupraujeme se značkami</h3>
+        <h3 class="logo__title">Spolupraujeme se značkami</h3>
         <div class="logo__scoup">
-            <div class="logo__scoup--lg">
+            <div class="logo__items">
                 <img src="img/logo/logo_lg.svg" alt="lg icon">
             </div>
-            <div class="logo__scoup--samsung">
+            <div class="logo__items logo__items--small">
                 <img src="img/logo/logo_samsung.svg" alt="samsung icon">
             </div>
-            <div class="logo__scoup--ivt">
+            <div class="logo__items">
                 <img src="img/logo/logo_ivt.svg" alt="ivt icon">
             </div>
         </div>
@@ -61,8 +66,8 @@ title: Pro nas
         </div> 
 
         <div class="button">
-            <p class="button-contact__text">Vice informace</p>
-            <a href="#" class="button__icon"> </a>
+            <p class="button__text">Vice informace</p>
+            <a href="/tepelna-cerpadla/" class="button__icon"> </a>
         </div>
     </div>
 
@@ -209,18 +214,4 @@ title: Pro nas
     </div>
 </section>
 
-<!-- Blok call to action -->
-<section class="footer">
-    <div class="footer-cta">
-        <div class="footer-cta__container">
-            <div class="footer-cta__background"></div>
-            <div class="footer-cta__inner">
-                <div class="footer-cta__content">
-                    <img class="footer-cta__logo" src="img/icon/icon_logo.svg" alt="logo">
-                    <h2>Kontaktujte nás a rádi vám poskytneme veškeré potřebné informace.</h2>
-                    <!-- button dopisat -->
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
