--- a/kontakty.html
+++ b/kontakty.html
@@ -3,4 +3,19 @@ layout: header.njk
 title: kontakty
 ---
 
-<p>ggggd</p>
+<section class="kontakt">
+    <div class="kontakt__body">
+
+        <h1 class="kontakt__title"></h1>
+        <div class="kontakt__up">
+            <p class="kontakt__phon">+420 999 800 000</p>
+            <p class="kontakt__mail">info@vavrac.eu</p>
+        </div>
+        <div class="kontakt__bottom">
+            <p class="kontakt__sub">Adresa</p>
+            <p class="kontakt__adress">Neexistující ulice, 123. Praha česka republika 15400</p>
+        </div>
+    </div>
+
+
+</section>
