--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@ title: Pro nas
     <div class="info-cart">
         <p>V odbore vic než</p>
         <h2>15 let </h2>
-        <img src="img/icon/icon_logo.svg" alt="Logo">
+        <img src="/img/icon/icon_logo.svg" alt="Logo">
     </div>
-    <img src="img/photo/photo_about.svg" alt="">
+    <img src="/img/photo/photo_about.svg" alt="">
    
     <!-- Blok se značkamy -->
     <div class="logo">
         <h3 class="logo__title">Spolupraujeme se značkami</h3>
         <div class="logo__scoup">
             <div class="logo__items">
-                <img src="img/logo/logo_lg.svg" alt="lg icon">
+                <img src="/img/logo/logo_lg.svg" alt="lg icon">
             </div>
             <div class="logo__items logo__items--small">
-                <img src="img/logo/logo_samsung.svg" alt="samsung icon">
+                <img src="/img/logo/logo_samsung.svg" alt="samsung icon">
             </div>
             <div class="logo__items">
-                <img src="img/logo/logo_ivt.svg" alt="ivt icon">
+                <img src="/img/logo/logo_ivt.svg" alt="ivt icon">
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@ title: Pro nas
     <h2 class="ofer__title">Nabizujeme</h2>
     <div class="card-info">
         <div class="card-info__background"></div>
-        <img src="img/icon/icon_tc.svg" alt="">
+        <img src="/img/icon/icon_tc.svg" alt="">
         <div class="card-info__text">
             <h3>Tepelná čerpadla vzduch – voda</h3>
             <p>Jsme odborníci na instalaci tepelných čerpadel vzduch-voda. 
@@ -74,8 +74,8 @@ title: Pro nas
     <!-- neni dopsane carty-->
     <div class="card--big">
         <div class="card__background"></div>
-        <img src="img/img/img_dotace.png" alt="dotace">
-        <img src="img/icon/icon_tc.svg" alt="">
+        <img src="/img/img/img_dotace.png" alt="dotace">
+        <img src="/img/icon/icon_tc.svg" alt="">
         <div class="card__text">
                 <h3>Tepelná čerpadla vzduch – voda</h3>
                 <p>Jsme odborníci na instalaci tepelných čerpadel vzduch-voda. 
@@ -174,13 +174,13 @@ title: Pro nas
 <section class="photo-section">
     <div class="photo-section__grid">
         <div class="photo-section__photo">
-            <img src="img/photo/photo_work-1.svg" alt="photo">
+            <img src="/img/photo/photo_work-1.svg" alt="photo">
         </div>
         <div class="photo-section__title">
             <h3>Vaše cesta k optimálnímu tepelnému čerpadlu a klimatizaci začíná tady</h3>
         </div>
         <div class="photo-section__photo">
-            <img src="img/photo/photo_work-2.svg" alt="photo">
+            <img src="/img/photo/photo_work-2.svg" alt="photo">
         </div>
     </div>
 </section>
