--- a/klimatizace.html
+++ b/klimatizace.html
@@ -77,7 +77,7 @@ title: klimatizace
             <!-- Card 01 -->
             <div class="card-revie">
                 <div class="card-revie__figure">
-                    <img src="/img/photo/photo_klima_real-1.svg" alt="">
+                    <img src="/img/photo/photo_klima_real-1.jpg" alt="">
                 </div>
 
                 <div class="card-revie__body">
@@ -97,7 +97,7 @@ title: klimatizace
             <!-- Card 02 -->
             <div class="card-revie">
                 <div class="card-revie__figure">
-                    <img src="/img/photo/photo_klima_real-2.svg" alt="">
+                    <img src="/img/photo/photo_klima_real-2.jpg" alt="">
                 </div>
 
                 <div class="card-revie__body">
@@ -118,3 +118,15 @@ title: klimatizace
         </div>
     </div>
 </section>    
+
+<!-- Blok s FAQ-->
+<section class="question">
+    <div class="question__flex">
+        <h2 class="question__title">Často kladené otázky o klimatizace</h2>
+
+        <!-- dodelat acardion -->
+        <div class="acordion">
+
+        </div>
+    </div>
+</section>
