--- a/tepelna-cerpadla.html
+++ b/tepelna-cerpadla.html
@@ -120,18 +120,18 @@ title: tepelna-cerpadla
     </div>
 </section>
 
-<!-- Blok se značkamy -->
+   <!-- Blok se značkamy -->
 <div class="logo">
     <h3 class="logo__title">Spolupraujeme se značkami</h3>
     <div class="logo__scoup">
         <div class="logo__items">
-            <img src="img/logo/logo_lg.svg" alt="lg icon">
+            <img src="/img/logo/logo_lg.svg" alt="lg icon">
         </div>
         <div class="logo__items logo__items--small">
-            <img src="img/logo/logo_samsung.svg" alt="samsung icon">
+            <img src="/img/logo/logo_samsung.svg" alt="samsung icon">
         </div>
         <div class="logo__items">
-            <img src="img/logo/logo_ivt.svg" alt="ivt icon">
+            <img src="/img/logo/logo_ivt.svg" alt="ivt icon">
         </div>
     </div>
 </div>
