--- a/klimatizace.html
+++ b/klimatizace.html
@@ -1,6 +1,6 @@
 ---
-layout: header.njk
-title: klimatizace
+layout: main-template.njk
+title: cta-logo-template
 ---
 <!-- Blok call to main -->
 <section class="main">
