--- a/klimatizace.html
+++ b/klimatizace.html
@@ -1,6 +1,6 @@
 ---
-layout: main-template.njk
-title: cta-logo-template
+layout: cta-logo-template.njk
+title: klimatizace
 ---
 
 <!-- Blok call to main -->
