--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ title: Pro nas
 
 
 <!-- Blok co Nabizujeme-->
-<section class="ofer">
-    <h2 class="ofer__title">Nabizujeme</h2>
+<section class="offer">
+
+    <h2 class="offer__title">Nabizujeme</h2>
     <div class="card-info">
         <div class="card-info__background"></div>
         <img src="/img/icon/icon_tc.svg" alt="">
